Fix indexing dirs